<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/profile_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_account_circle_selected"
                android:contentDescription="@string/profile_title" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="john@example.com"
                android:textSize="14sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="111-222-3333"
                android:textSize="14sp"
                android:layout_marginTop="4dp"/>


            <Button
                android:id="@+id/btn_events_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/black"
                android:text="Events History" />


            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="Edit Profile" />

            <Button
                android:id="@+id/btn_organizer_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/black"
                android:text="Switch to Organizer" />

            <Button
                android:id="@+id/btn_delete_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="Delete Profile"
                android:textAllCaps="false"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Bottom nav -->
    <include
        android:id="@+id/bottom_nav_include"
        layout="@layout/bottom_navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
