<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Settings"
        app:titleCentered="true" />

    <!-- Settings content -->
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- spacer -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />


    </LinearLayout>
</LinearLayout>
